# OpenCADStudio

./: COMMANDS.md  Cargo.toml  INTEGRATION_GAPS.md  README.md  ROADMAP.md  VIEWPORT_WIDGET_PLAN.md  WIRE_OPTIMIZATION_PLAN.md  index.html
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: pages.yml  release.yml
assets/: ocad.pgp
assets/linetypes/: OpenCADStudio.lin
assets/patterns/: OpenCADStudio.pat
crates/ocs_plugin_api/: Cargo.toml
crates/ocs_plugin_api/src/: host.rs  lib.rs  process.rs  runner.rs
crates/ocs_plugin_api/src/ipc/: client.rs  protocol.rs  server.rs
crates/ocs_plugin_api/src/process/: manager.rs
crates/stormsewer/: Cargo.toml
docs/: PR-plugin-host.md  issue-78-comment.txt  plugin-architecture.md
docs/automation/: README.md  ocs.py
docs/plugin-template/: dispatch.rs  plugin.rs
flatpak/: io.github.HakanSeven12.H7CAD.metainfo.xml
packaging/homebrew/: README.md  open-cad-studio.rb
packaging/windows/: License.rtf  ui.wxs
src/: cli.rs  command.rs  config.rs  lib.rs  linetypes.rs  main.rs  snap.rs  sys.rs  update_check.rs  videos.rs
src/app/: alias.rs  automation.rs  cmd_result.rs  command_driver.rs  commands.rs  config.rs  document.rs  expr_eval.rs  helpers.rs  history.rs  layers.rs  mod.rs  mtext_editor.rs  plugin_host.rs  properties.rs  recent.rs  settings.rs  style_ops.rs  text_inline.rs  update.rs  view.rs  visibility.rs
src/command/: mod.rs
src/io/: mod.rs  (+6 more)
tests/: block_hatch_export.rs  dim_line_color_roundtrip.rs  page_setup_root_repair.rs
(+253 files in other folders)
